New component Ingredients, also finished form submissin to include all class vars

--- a/client/src/pages/Details.css
+++ b/client/src/pages/Details.css
@@ -25,9 +25,9 @@
 }
 .instruction-container{
     width: 100%;
-    outline-width: 1px;
+    /* outline-width: 1px;
     outline-color: red;
-    outline-style: solid;
+    outline-style: solid; */
     margin: 0 auto;
 }
 .ingredients-title{
