--- a/client/src/pages/RecipeCard.css
+++ b/client/src/pages/RecipeCard.css
@@ -1,15 +1,16 @@
-.col-md{
-    width: 34%;
+.button-column{
+    width: 22%;
     display: inline-block;
     padding-left: 0;
     position: relative;
+    padding-right: 4px;
     
     /* outline-width: 1px;
     outline-color: red;
     outline-style: solid; */
 }
-.col-md-12{
-    width: 30%;
+.desc{
+    width: 40%;
     display: inline-block;
     padding-top: 10px;
     /* outline-width: 1px;
@@ -17,14 +18,18 @@
     outline-style: solid; */
 }
 .mb-0{
-    width: 36%;
+    width: 35%;
 }
-
+.card-title{
+    font-size: .8rem;
+}
 .fa, .fas{
     padding-right: 5px;
 }
 .button-row{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    width: 100%;
+    height: 50%;
+}
+.btn-sm{
+    float: right;
 }
