--- a/client/src/pages/NewRecipe.css
+++ b/client/src/pages/NewRecipe.css
@@ -1,3 +1,10 @@
 .ing-text, .ins-text{
     width: 100%;
 }
+.form-container{
+    display: block;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
