--- a/client/src/pages/RecipeCard.css
+++ b/client/src/pages/RecipeCard.css
@@ -10,17 +10,18 @@
     outline-style: solid; */
 }
 .desc{
-    width: 40%;
+    width: 28%;
+    height: 100%;
     display: inline-block;
-    padding-top: 10px;
     /* outline-width: 1px;
     outline-color: red;
     outline-style: solid; */
 }
 .mb-0{
-    width: 35%;
+    width: 50%;
 }
-.card-title{
+.row-title{
+
     font-size: .8rem;
 }
 .fa, .fas{
@@ -32,4 +33,8 @@
 }
 .btn-sm{
     float: right;
+}
+.title{
+    padding: 2px;
+    font-family: 'Montserrat', sans-serif;
 }
