--- a/client/src/pages/Recipes.css
+++ b/client/src/pages/Recipes.css
@@ -1,6 +1,6 @@
 .card-container{
     width: 100%;
     text-align: center;
-    outline-style: solid;
-    outline-color: red;
+    /* outline-style: solid;
+    outline-color: red; */
 }
