v5 or something idk anymore

--- a/client/src/pages/RecipeCard.css
+++ b/client/src/pages/RecipeCard.css
@@ -9,6 +9,9 @@
     outline-color: red;
     outline-style: solid; */
 }
+.title{
+    cursor: pointer;
+}
 .desc{
     width: 20%;
     height: 100%;
