--- a/client/src/pages/Ingredients.css
+++ b/client/src/pages/Ingredients.css
@@ -4,3 +4,9 @@
 .ingredients{
     font-family: 'Nunito', sans-serif;
 }
+.ing-table{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
