--- a/client/src/pages/RecipeCard.css
+++ b/client/src/pages/RecipeCard.css
@@ -1,6 +1,6 @@
 .button-column{
-    width: 22%;
-    display: inline-block;
+    width: 100%;
+    float: left;
     padding-left: 0;
     position: relative;
     /* outline-width: 1px;
@@ -11,7 +11,7 @@
     cursor: pointer;
 }
 .desc{
-    width: 20%;
+    width: 30%;
     height: 100%;
     display: inline-block;
     /* outline-width: 1px;
@@ -19,9 +19,9 @@
     outline-style: solid; */
 }
 .mb-0{
-    width: 58%;
+    width: 70%;
     text-align: center;
-    padding-top: 7px;
+    height: 50%;
 }
 /* .row-title{
     font-size: .8rem;
@@ -35,7 +35,8 @@
     height: 50%;
 }
 .btn-sm{
-    float: right;
+    float: left;
+    width: 33%;
 }
 .title{
     padding: 2px;
